--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,9 @@
   <meta property="twitter:image:height" content="600">
 
   <link rel="image_src" type="image/jpeg" href="https://code.gov/assets/img/og.jpg">
-  <link rel="preload" href="assets/fonts/fontawesome-webfont.woff2?v=4.6.3" as="font" type="font/woff2" crossorigin>
 
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en&unknown=polyfill"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en&unknown=polyfill" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.js" defer></script>
 
   <% if (webpackConfig.htmlElements.headTags) { %>
   <!-- Configured Head Tags  -->
