--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <meta property="twitter:image:height" content="600">
 
   <link rel="image_src" type="image/jpeg" href="https://code.gov/assets/img/og.jpg">
+  <link rel="preload" as="image" href="./assets/img/american_flag_1920x1280_gradient.jpg">
 
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en&unknown=polyfill" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.js" defer></script>
